--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,6 +5,10 @@
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/nav_home">
 
+    <action
+        android:id="@+id/action_to_importDatabaseDialogFragment"
+        app:destination="@id/importDatabaseDialogFragment" />
+
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.simpleknowledgebase.fragments.KeywordSearchFragment"
@@ -22,6 +26,9 @@
         <action
             android:id="@+id/action_nav_home_to_categoryOverviewFragment"
             app:destination="@id/nav_categoryOverviewFragment" />
+        <action
+            android:id="@+id/action_nav_home_to_importDatabaseDialogFragment"
+            app:destination="@id/importDatabaseDialogFragment" />
     </fragment>
 
     <fragment
@@ -101,4 +108,14 @@
             android:id="@+id/action_categoryOverviewFragment_to_nav_add_entry"
             app:destination="@id/nav_add_entry" />
     </fragment>
+    <dialog
+        android:id="@+id/importDatabaseDialogFragment"
+        android:name="com.example.simpleknowledgebase.fragments.ImportDatabaseDialogFragment"
+        android:label="ImportDatabaseDialogFragment" >
+        <action
+            android:id="@+id/action_importDatabaseDialogFragment_to_nav_home"
+            app:destination="@id/nav_home" />
+    </dialog>
+
+
 </navigation>
